迁移模式轮盘与主界面栏 / port mode wheels and main bars